Preserve native database value types